<resources>
    <string name="app_name">Court Counter</string>
    <string name="teamA">team A</string>
    <string name="teamB">team B</string>
    <string name="Points3">+3 Points</string>
    <string name="Points2">+2 Points</string>
    <string name="Points1">free Throw</string>
    <string name="undo">undo</string>
    <string name="back">back</string>
    <string name="reset">reset</string>
    <string name="title_activity_settings">Settings</string>

    <string name="Setting_memory">Times You Can press Undo: </string>


</resources>